--- a/the_machinery_book/print.html
+++ b/the_machinery_book/print.html
@@ -1208,7 +1208,7 @@ component:</p>
 <div style="break-before: page; page-break-before: always;"></div><h2 id="physics"><a class="header" href="#physics">Physics</a></h2>
 <p>The Machinery integrates Nvidia's PhysX toolkit and uses it for physics simulation of entities. This
 section will not attempt to describe in detail how physics simulation works, for that we refer to
-the PhysX documentation. We will only talk about how physics is set up in The Machinery.</p>
+<a href="https://docs.nvidia.com/gameworks/content/gameworkslibrary/physx/guide/Manual/Index.html">the PhysX documentation</a>. We will only talk about how physics is set up in The Machinery.</p>
 <p>The physics simulation system introduces two new assets: <em>Physics Material</em> and <em>Physics Collision</em>
 as well as four new components: <em>Physics Shape Component</em>, <em>Physics Body Component</em>, <em>Physics
 Joint Component</em>, and <em>Physics Mover Component</em>.</p>
