--- a/the_machinery_book/getting_started/migration_from_unity.html
+++ b/the_machinery_book/getting_started/migration_from_unity.html
@@ -152,15 +152,15 @@
 <p>The following table contains common Unity terms on the left and their The Machinery equivalents (or rough equivalent) on the right.</p>
 <table><thead><tr><th>Unity</th><th>The Machinery</th></tr></thead><tbody>
 <tr><td>GameObjects</td><td>Are composed of Entities and Components and Systems</td></tr>
-<tr><td>Prefabs</td><td><a href="/the_machinery_book/editing_workflows/prototypes.html">Prototypes</a></td></tr>
-<tr><td>Materials, Shaders, Textures, Particle Effects, Mesh, Geometry, Shader Graph, Material Editor</td><td><a href="/the_machinery_book/editing_workflows/creation_graphs_asset_pipeline.html">Creation Graph</a></td></tr>
+<tr><td>Prefabs</td><td><a href="%7B%7Bbase_url%7D%7D/the_machinery_book/editing_workflows/prototypes.html">Prototypes</a></td></tr>
+<tr><td>Materials, Shaders, Textures, Particle Effects, Mesh, Geometry, Shader Graph, Material Editor</td><td><a href="%7B%7Bbase_url%7D%7D/the_machinery_book/editing_workflows/creation_graphs_asset_pipeline.html">Creation Graph</a></td></tr>
 <tr><td><strong>UI</strong></td><td></td></tr>
-<tr><td>Hierarchy Panel</td><td><a href="/the_machinery_book/the_editor/entity_tree_tab.html">Entity Tree</a></td></tr>
-<tr><td>Inspector</td><td><a href="/the_machinery_book/the_editor/properties_tab.html">Properties Tab</a></td></tr>
-<tr><td>Project Browser</td><td><a href="/the_machinery_book/the_editor/asset_browser.html">Asset Browser</a></td></tr>
-<tr><td>Scene View</td><td><a href="/the_machinery_book/the_editor/asset_browser.html">Scene Tab</a></td></tr>
+<tr><td>Hierarchy Panel</td><td><a href="%7B%7Bbase_url%7D%7D/the_machinery_book/the_editor/entity_tree_tab.html">Entity Tree</a></td></tr>
+<tr><td>Inspector</td><td><a href="%7B%7Bbase_url%7D%7D/the_machinery_book/the_editor/properties_tab.html">Properties Tab</a></td></tr>
+<tr><td>Project Browser</td><td><a href="%7B%7Bbase_url%7D%7D/the_machinery_book/the_editor/asset_browser.html">Asset Browser</a></td></tr>
+<tr><td>Scene View</td><td><a href="%7B%7Bbase_url%7D%7D/the_machinery_book/the_editor/asset_browser.html">Scene Tab</a></td></tr>
 <tr><td><strong>Programming</strong></td><td></td></tr>
-<tr><td>Blot</td><td><a href="/the_machinery_book/editing_workflows/visual-scripting.html">Entity Graph</a></td></tr>
+<tr><td>Blot</td><td><a href="%7B%7Bbase_url%7D%7D/the_machinery_book/editing_workflows/visual-scripting.html">Entity Graph</a></td></tr>
 <tr><td>C#</td><td>C</td></tr>
 </tbody></table>
 <h2 id="questions-you-might-have"><a class="header" href="#questions-you-might-have">Questions you might have</a></h2>
