--- a/the_machinery_book/getting_started/migration_from_unreal.html
+++ b/the_machinery_book/getting_started/migration_from_unreal.html
@@ -152,15 +152,15 @@
 <p>The following table contains common UE4 terms on the left and their The Machinery equivalents (or rough equivalent) on the right.</p>
 <table><thead><tr><th>UE4</th><th>The Machinery</th></tr></thead><tbody>
 <tr><td>Actor, Pawn</td><td>Are composed of Entities and Components and Systems</td></tr>
-<tr><td>Blueprint Class (only the inheritance aspect and that they can represent actors)</td><td><a href="/the_machinery_book/editing_workflows/prototypes.html">Prototypes</a></td></tr>
-<tr><td>Material Instance, Shaders, Textures, Particle Effects, Static Mesh, Geometry,Skeletal Mesh, Material Editor</td><td><a href="/the_machinery_book/editing_workflows/creation_graphs_asset_pipeline.html">Creation Graph</a></td></tr>
+<tr><td>Blueprint Class (only the inheritance aspect and that they can represent actors)</td><td><a href="%7B%7Bbase_url%7D%7D/the_machinery_book/editing_workflows/prototypes.html">Prototypes</a></td></tr>
+<tr><td>Material Instance, Shaders, Textures, Particle Effects, Static Mesh, Geometry,Skeletal Mesh, Material Editor</td><td><a href="%7B%7Bbase_url%7D%7D/the_machinery_book/editing_workflows/creation_graphs_asset_pipeline.html">Creation Graph</a></td></tr>
 <tr><td><strong>UI</strong></td><td></td></tr>
-<tr><td>World Outliner</td><td><a href="/the_machinery_book/the_editor/entity_tree_tab.html">Entity Tree</a></td></tr>
-<tr><td>Details Panel</td><td><a href="/the_machinery_book/the_editor/properties_tab.html">Properties Tab</a></td></tr>
-<tr><td>Content Browser</td><td><a href="/the_machinery_book/the_editor/asset_browser.html">Asset Browser</a></td></tr>
-<tr><td>Viewport</td><td><a href="/the_machinery_book/the_editor/asset_browser.html">Scene Tab</a></td></tr>
+<tr><td>World Outliner</td><td><a href="%7B%7Bbase_url%7D%7D/the_machinery_book/the_editor/entity_tree_tab.html">Entity Tree</a></td></tr>
+<tr><td>Details Panel</td><td><a href="%7B%7Bbase_url%7D%7D/the_machinery_book/the_editor/properties_tab.html">Properties Tab</a></td></tr>
+<tr><td>Content Browser</td><td><a href="%7B%7Bbase_url%7D%7D/the_machinery_book/the_editor/asset_browser.html">Asset Browser</a></td></tr>
+<tr><td>Viewport</td><td><a href="%7B%7Bbase_url%7D%7D/the_machinery_book/the_editor/asset_browser.html">Scene Tab</a></td></tr>
 <tr><td><strong>Programming</strong></td><td></td></tr>
-<tr><td>Blueprints</td><td><a href="/the_machinery_book/editing_workflows/visual-scripting.html">Entity Graph</a></td></tr>
+<tr><td>Blueprints</td><td><a href="%7B%7Bbase_url%7D%7D/the_machinery_book/editing_workflows/visual-scripting.html">Entity Graph</a></td></tr>
 <tr><td>C++</td><td>C</td></tr>
 </tbody></table>
 <h2 id="questions-you-might-have"><a class="header" href="#questions-you-might-have">Questions you might have</a></h2>
