--- a/the_machinery_book/print.html
+++ b/the_machinery_book/print.html
@@ -476,15 +476,15 @@ You can also drop in on our <a href="https://discord.gg/SHHSZaH">Discord Server<
 <p>The following table contains common Unity terms on the left and their The Machinery equivalents (or rough equivalent) on the right.</p>
 <table><thead><tr><th>Unity</th><th>The Machinery</th></tr></thead><tbody>
 <tr><td>GameObjects</td><td>Are composed of Entities and Components and Systems</td></tr>
-<tr><td>Prefabs</td><td><a href="getting_started//the_machinery_book/editing_workflows/prototypes.html">Prototypes</a></td></tr>
-<tr><td>Materials, Shaders, Textures, Particle Effects, Mesh, Geometry, Shader Graph, Material Editor</td><td><a href="getting_started//the_machinery_book/editing_workflows/creation_graphs_asset_pipeline.html">Creation Graph</a></td></tr>
+<tr><td>Prefabs</td><td><a href="getting_started/%7B%7Bbase_url%7D%7D/the_machinery_book/editing_workflows/prototypes.html">Prototypes</a></td></tr>
+<tr><td>Materials, Shaders, Textures, Particle Effects, Mesh, Geometry, Shader Graph, Material Editor</td><td><a href="getting_started/%7B%7Bbase_url%7D%7D/the_machinery_book/editing_workflows/creation_graphs_asset_pipeline.html">Creation Graph</a></td></tr>
 <tr><td><strong>UI</strong></td><td></td></tr>
-<tr><td>Hierarchy Panel</td><td><a href="getting_started//the_machinery_book/the_editor/entity_tree_tab.html">Entity Tree</a></td></tr>
-<tr><td>Inspector</td><td><a href="getting_started//the_machinery_book/the_editor/properties_tab.html">Properties Tab</a></td></tr>
-<tr><td>Project Browser</td><td><a href="getting_started//the_machinery_book/the_editor/asset_browser.html">Asset Browser</a></td></tr>
-<tr><td>Scene View</td><td><a href="getting_started//the_machinery_book/the_editor/asset_browser.html">Scene Tab</a></td></tr>
+<tr><td>Hierarchy Panel</td><td><a href="getting_started/%7B%7Bbase_url%7D%7D/the_machinery_book/the_editor/entity_tree_tab.html">Entity Tree</a></td></tr>
+<tr><td>Inspector</td><td><a href="getting_started/%7B%7Bbase_url%7D%7D/the_machinery_book/the_editor/properties_tab.html">Properties Tab</a></td></tr>
+<tr><td>Project Browser</td><td><a href="getting_started/%7B%7Bbase_url%7D%7D/the_machinery_book/the_editor/asset_browser.html">Asset Browser</a></td></tr>
+<tr><td>Scene View</td><td><a href="getting_started/%7B%7Bbase_url%7D%7D/the_machinery_book/the_editor/asset_browser.html">Scene Tab</a></td></tr>
 <tr><td><strong>Programming</strong></td><td></td></tr>
-<tr><td>Blot</td><td><a href="getting_started//the_machinery_book/editing_workflows/visual-scripting.html">Entity Graph</a></td></tr>
+<tr><td>Blot</td><td><a href="getting_started/%7B%7Bbase_url%7D%7D/the_machinery_book/editing_workflows/visual-scripting.html">Entity Graph</a></td></tr>
 <tr><td>C#</td><td>C</td></tr>
 </tbody></table>
 <h2 id="questions-you-might-have"><a class="header" href="#questions-you-might-have">Questions you might have</a></h2>
@@ -535,15 +535,15 @@ You can also drop in on our <a href="https://discord.gg/SHHSZaH">Discord Server<
 <p>The following table contains common UE4 terms on the left and their The Machinery equivalents (or rough equivalent) on the right.</p>
 <table><thead><tr><th>UE4</th><th>The Machinery</th></tr></thead><tbody>
 <tr><td>Actor, Pawn</td><td>Are composed of Entities and Components and Systems</td></tr>
-<tr><td>Blueprint Class (only the inheritance aspect and that they can represent actors)</td><td><a href="getting_started//the_machinery_book/editing_workflows/prototypes.html">Prototypes</a></td></tr>
-<tr><td>Material Instance, Shaders, Textures, Particle Effects, Static Mesh, Geometry,Skeletal Mesh, Material Editor</td><td><a href="getting_started//the_machinery_book/editing_workflows/creation_graphs_asset_pipeline.html">Creation Graph</a></td></tr>
+<tr><td>Blueprint Class (only the inheritance aspect and that they can represent actors)</td><td><a href="getting_started/%7B%7Bbase_url%7D%7D/the_machinery_book/editing_workflows/prototypes.html">Prototypes</a></td></tr>
+<tr><td>Material Instance, Shaders, Textures, Particle Effects, Static Mesh, Geometry,Skeletal Mesh, Material Editor</td><td><a href="getting_started/%7B%7Bbase_url%7D%7D/the_machinery_book/editing_workflows/creation_graphs_asset_pipeline.html">Creation Graph</a></td></tr>
 <tr><td><strong>UI</strong></td><td></td></tr>
-<tr><td>World Outliner</td><td><a href="getting_started//the_machinery_book/the_editor/entity_tree_tab.html">Entity Tree</a></td></tr>
-<tr><td>Details Panel</td><td><a href="getting_started//the_machinery_book/the_editor/properties_tab.html">Properties Tab</a></td></tr>
-<tr><td>Content Browser</td><td><a href="getting_started//the_machinery_book/the_editor/asset_browser.html">Asset Browser</a></td></tr>
-<tr><td>Viewport</td><td><a href="getting_started//the_machinery_book/the_editor/asset_browser.html">Scene Tab</a></td></tr>
+<tr><td>World Outliner</td><td><a href="getting_started/%7B%7Bbase_url%7D%7D/the_machinery_book/the_editor/entity_tree_tab.html">Entity Tree</a></td></tr>
+<tr><td>Details Panel</td><td><a href="getting_started/%7B%7Bbase_url%7D%7D/the_machinery_book/the_editor/properties_tab.html">Properties Tab</a></td></tr>
+<tr><td>Content Browser</td><td><a href="getting_started/%7B%7Bbase_url%7D%7D/the_machinery_book/the_editor/asset_browser.html">Asset Browser</a></td></tr>
+<tr><td>Viewport</td><td><a href="getting_started/%7B%7Bbase_url%7D%7D/the_machinery_book/the_editor/asset_browser.html">Scene Tab</a></td></tr>
 <tr><td><strong>Programming</strong></td><td></td></tr>
-<tr><td>Blueprints</td><td><a href="getting_started//the_machinery_book/editing_workflows/visual-scripting.html">Entity Graph</a></td></tr>
+<tr><td>Blueprints</td><td><a href="getting_started/%7B%7Bbase_url%7D%7D/the_machinery_book/editing_workflows/visual-scripting.html">Entity Graph</a></td></tr>
 <tr><td>C++</td><td>C</td></tr>
 </tbody></table>
 <h2 id="questions-you-might-have-1"><a class="header" href="#questions-you-might-have-1">Questions you might have</a></h2>
@@ -624,7 +624,7 @@ In the context menu, you have more options for pinning. These allow you to manag
 <tr><td>Pin to View 🗖</td><td>This Pins the tab's content to another tab view that is currently open in the current window. You can pin a tab to multiple other tabs at the same time.</td></tr>
 <tr><td>Pin to Window 🗗</td><td>It pins the current tab to the selected window. For example, if you pin the Properties tab to Window 2. and choose an asset from the Asset Browser, the properties tab in Window 1. will display the selected asset.</td></tr>
 </tbody></table>
-<p>Besides, it is possible to extend the Engine with custom tabs. You can do this via the <strong>File → New Plugin → Editor Tabs.</strong> How to write your custom tab is out of the scope of this article but is covered <a href="the_editor//the_machinery_book/extending_the_machinery/write-a-plugin.html">here</a>.</p>
+<p>Besides, it is possible to extend the Engine with custom tabs. You can do this via the <strong>File → New Plugin → Editor Tabs.</strong> How to write your custom tab is out of the scope of this article but is covered <a href="the_editor/%7B%7Bbase_url%7D%7D/the_machinery_book/extending_the_machinery/write-a-plugin.html">here</a>.</p>
 <p><strong>Keyboard bindings</strong></p>
 <table><thead><tr><th>Key</th><th>Description</th></tr></thead><tbody>
 <tr><td>Ctrl + Tab</td><td>Switch between tabs</td></tr>
@@ -1008,7 +1008,7 @@ cases such as particle systems, sky rendering and sprite sheets, then have a loo
 <h1 id="importing-a-dcc-asset"><a class="header" href="#importing-a-dcc-asset">Importing a DCC asset</a></h1>
 <p>You can import an asset by selecting <strong>File &gt; Import...</strong> in the main menu, pressing <strong>Ctrl-I</strong>, or dropping a DCC file on the Asset Browser tab. When you do this, it ends up in our data-model as a <code>dcc_asset</code>. A <code>dcc_asset</code> can hold all types of data that was used to build the asset in the DCC-tool, such as objects, images, materials, geometry and animation data.</p>
 <p>During the import step, The Machinery only runs a bare minimum of data processing, just enough so that we can display a visual representation of the asset in the <em>Preview</em> tab. Imports run in the background so you can continue to work uninterrupted. When the import finishes the asset will show up in the <em>Asset Browser</em>. Note that import of large assets can take a significant amount of time. You can monitor the progress of the import operation in the status bar.</p>
-<p>For more in detail explanation about how to import assets checkout the <a href="editing_workflows//the_machinery_book/editing_workflows/import_assets.html">Asset Import Part</a>.</p>
+<p>For more in detail explanation about how to import assets checkout the <a href="editing_workflows/%7B%7Bbase_url%7D%7D/the_machinery_book/editing_workflows/import_assets.html">Asset Import Part</a>.</p>
 <h3 id="basic-entity-rigging-with-image-and-material-extraction"><a class="header" href="#basic-entity-rigging-with-image-and-material-extraction">Basic entity rigging, with image and material extraction</a></h3>
 <p>If you click on a <code>dcc_asset</code> that contains a mesh in the Asset Browser, you will be presented
 with importer settings in the Properties tab:</p>
@@ -1499,9 +1499,9 @@ same machine (just start two instances of the_machinery.exe) and connect using t
 <p>Sub-objects in The Truth are references to <em>owned</em> objects. They work just as references, but have special behaviours in some situations. For examples, when an object is cloned, all its sub-objects will be cloned too, while its references will not.</p>
 <p>For more information checkout the <a href="https://ourmachinery.com/apidoc/foundation/the_truth.h.html">documentation</a> and these blog posts: <a href="https://ourmachinery.com/post/the-story-behind-the-truth-designing-a-data-model/">The Story behind The Truth: Designing a Data Model</a>  or this <a href="https://ourmachinery.com/post/multi-threading-the-truth/">one</a>.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="extending-the-machinery"><a class="header" href="#extending-the-machinery">Extending The Machinery</a></h1>
-<p>In The Machinery, <strong>everything is a <a href="extending_the_machinery//the_machinery_book/extending_the_machinery/the_plugin_system.html">plugin</a></strong>. You can <strong>extend</strong>, <strong>modify</strong> or <strong>replace</strong> existing engine functionality with your plugins. </p>
-<p>The Engine explicitly aims to be simple, minimalistic, and easy to understand. All our code is written in plain C, a significantly more straightforward language than modern C++. The entire codebase compiles in less than 30 seconds, and we support hot-reloading of DLLs, allowing for fast iteration cycles. You can modify your plugin code while the editor or the game runs since the plugin system supports <a href="extending_the_machinery//the_machinery_book/extending_the_machinery/hot-reloading.html">hot-reloading</a>. In short, we want to be &quot;hackable.&quot; Our APIs are exposed as C interfaces, which means you can easily use them from C, C++, D, or any other language with an FFI for calling into C code.</p>
-<p>To create your plugin, follow the <a href="extending_the_machinery//the_machinery_book/extending_the_machinery/write-a-plugin.html">Write your Plugin Introduction</a>.</p>
+<p>In The Machinery, <strong>everything is a <a href="extending_the_machinery/%7B%7Bbase_url%7D%7D/the_machinery_book/extending_the_machinery/the_plugin_system.html">plugin</a></strong>. You can <strong>extend</strong>, <strong>modify</strong> or <strong>replace</strong> existing engine functionality with your plugins. </p>
+<p>The Engine explicitly aims to be simple, minimalistic, and easy to understand. All our code is written in plain C, a significantly more straightforward language than modern C++. The entire codebase compiles in less than 30 seconds, and we support hot-reloading of DLLs, allowing for fast iteration cycles. You can modify your plugin code while the editor or the game runs since the plugin system supports <a href="extending_the_machinery/%7B%7Bbase_url%7D%7D/the_machinery_book/extending_the_machinery/hot-reloading.html">hot-reloading</a>. In short, we want to be &quot;hackable.&quot; Our APIs are exposed as C interfaces, which means you can easily use them from C, C++, D, or any other language with an FFI for calling into C code.</p>
+<p>To create your plugin, follow the <a href="extending_the_machinery/%7B%7Bbase_url%7D%7D/the_machinery_book/extending_the_machinery/write-a-plugin.html">Write your Plugin Introduction</a>.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="the-plugin-system"><a class="header" href="#the-plugin-system">The plugin system</a></h1>
 <p><em>The Machinery</em> is built around a plugin model. All features, even the built-in ones, are provided
 through plugins. You can extend <em>The Machinery</em> by writing your own plugins.</p>
@@ -1656,7 +1656,7 @@ detects a file change, it will reimport the plugin.</p>
 <li>What is needed to write a plugin</li>
 <li>How to write a plugin</li>
 </ul>
-<p>This walk through expects you to have the basic understanding about the plugin system. Otherwise you can read more <a href="extending_the_machinery//the_machinery_book/extending_the_machinery/the_plugin_system.html">here</a>.</p>
+<p>This walk through expects you to have the basic understanding about the plugin system. Otherwise you can read more <a href="extending_the_machinery/%7B%7Bbase_url%7D%7D/the_machinery_book/extending_the_machinery/the_plugin_system.html">here</a>.</p>
 <p>The Machinery is built around a plugin model. All features, even the built-in ones, are provided
 through plugins. You can extend The Machinery by writing your own plugins. When The Machinery
 launches, it loads all the plugins named <code>tm_*.dll</code> in its <code>plugins/</code> folder. If you write your own
@@ -1884,7 +1884,7 @@ is filled in with the actual function pointers. As long as you don’t <em>call<
 plugin that implements them has been loaded, you are good. (You can test this by checking for NULL
 pointers in the struct.)</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="create-a-custom-truth-type"><a class="header" href="#create-a-custom-truth-type">Create a custom Truth Type</a></h1>
-<p>The truth is our centralized data model for editing data in the Engine. For more details on the system itself click here: <a href="the_truth//the_machinery_book/the_truth/index.html">The Truth</a></p>
+<p>The truth is our centralized data model for editing data in the Engine. For more details on the system itself click here: <a href="the_truth/%7B%7Bbase_url%7D%7D/the_machinery_book/the_truth/index.html">The Truth</a></p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="gameplay-coding-in-the-machinery"><a class="header" href="#gameplay-coding-in-the-machinery">Gameplay Coding in The Machinery</a></h1>
 <p>In this section, you will learn everything about Gameplay Coding in <em>The Machinery.</em> There are two primary ways of creating a vivid and active world:</p>
 <ul>
@@ -2094,7 +2094,7 @@ After you have loaded the <code>[tm_profiler_api](https://ourmachinery.com//apid
 <tr><td>The call to this macro starts a local profiler scope. The scope is tagged with the naked word tag (it gets stringified by the macro). Use a local profiler scope if you need to profile parts of a function.</td></tr>
 </tbody></table>
 <p><em>Example:</em></p>
-<pre><code class="language-c">void my_function(/the_machinery_book/*some arguments*/){
+<pre><code class="language-c">void my_function({{base_url}}/the_machinery_book/*some arguments*/){
    TM_PROFILER_BEGIN_FUNC_SCOPE()
    // .. some code
    TM_PROFILER_END_FUNC_SCOPE()
@@ -2114,7 +2114,7 @@ After you have loaded the <code>[tm_profiler_api](https://ourmachinery.com//apid
 <li>How to constantly monitor your changes</li>
 <li>How to write tests in your plugin</li>
 </ul>
-<p>This walkthrough expects basic knowledge on how to create a plugin and how a plugin is structured. If you are missing this knowledge, then you can find out more <a href="qa_pipeline//the_machinery_book/extending_the_machinery/the_plugin_system.html">here</a>.</p>
+<p>This walkthrough expects basic knowledge on how to create a plugin and how a plugin is structured. If you are missing this knowledge, then you can find out more <a href="qa_pipeline/%7B%7Bbase_url%7D%7D/the_machinery_book/extending_the_machinery/the_plugin_system.html">here</a>.</p>
 <blockquote>
 <p><strong>Note:</strong> At this point, the testing framework is in the beginning stage. We are extending its capabilities overtime to meet the needs of modern game development QA pipelines.</p>
 </blockquote>
