--- a/tutorials/the_truth/custom_asset/part1.html
+++ b/tutorials/the_truth/custom_asset/part1.html
@@ -147,7 +147,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="create-a-custom-asset-part-1"><a class="header" href="#create-a-custom-asset-part-1">Create a custom asset part 1</a></h1>
-<p>This walkthrough shows you how to add a custom asset to the Engine. You should have basic knowledge about how to write a custom plugin. If not, you might want to check this <a href="/the_machinery_book/extending_the_machinery/the_plugin_system.html">Guide</a>. The goal for this walkthrough is to write a text file asset.</p>
+<p>This walkthrough shows you how to add a custom asset to the Engine. You should have basic knowledge about how to write a custom plugin. If not, you might want to check this <a href="%7B%7Bbase_url%7D%7D/the_machinery_book/extending_the_machinery/the_plugin_system.html">Guide</a>. The goal for this walkthrough is to write a text file asset.</p>
 <p>In the parts 1 - 3 we will cover the following topics:</p>
 <ul>
 <li>How to create your asset</li>
@@ -287,7 +287,7 @@ tm_add_or_remove_implementation(reg, load, TM_THE_TRUTH_CREATE_TYPES_INTERFACE_N
 <p>What happens is not existing! But we are getting there! Check out the <a href="#">next part</a> for more complex and existing actions.</p>
 <h2 id="what-is-next"><a class="header" href="#what-is-next">What is next?</a></h2>
 <p>The next part will refactor the current code and show you how to make your code and asset more useful by implementing the action asset.</p>
-<p><a href="/tutorials/the_truth/custom_asset/part3.html">Part 2</a></p>
+<p>[Part 2]tutorials/the_truth/custom_asset/part3.html)</p>
 <h2 id="appendix-adding-an-asset-via-code-to-the-asset-browser"><a class="header" href="#appendix-adding-an-asset-via-code-to-the-asset-browser">Appendix: Adding an asset via code to the Asset Browser</a></h2>
 <p>Sometimes it is necessary to create an asset via code. The Asset Browser plugin provides a solution for this the <code>tm_asset_browser_add_asset_api</code>. With this API assets can be created and added to the current project.</p>
 <p>To add an asset to the asset browser a few steps are needed. </p>
