--- a/tutorials/ui/build_custom_ui_controls/index.html
+++ b/tutorials/ui/build_custom_ui_controls/index.html
@@ -150,9 +150,9 @@
 <p>This walkthrough we will learn how to use The Machinery <a href="https://ourmachinery.com/apidoc/plugins/ui">UI system</a>.</p>
 <p>In the parts 1 - 3 we will cover the following topics:</p>
 <ul>
-<li><a href="%7B%7Bbase_url%7D%7D/tutorials/ui/build_custom_ui_controls/part1.html">Create a custom circular button</a></li>
-<li><a href="%7B%7Bbase_url%7D%7D/tutorials/ui/build_custom_ui_controls/part2.html">Add a texture to our custom control</a></li>
-<li><a href="%7B%7Bbase_url%7D%7D/tutorials/ui/build_custom_ui_controls/part3.html">Setup a UI Renderer</a></li>
+<li><a href="https://ourmachinery.github.io/themachinery-books//tutorials/ui/build_custom_ui_controls/part1.html">Create a custom circular button</a></li>
+<li><a href="https://ourmachinery.github.io/themachinery-books//tutorials/ui/build_custom_ui_controls/part2.html">Add a texture to our custom control</a></li>
+<li><a href="https://ourmachinery.github.io/themachinery-books//tutorials/ui/build_custom_ui_controls/part3.html">Setup a UI Renderer</a></li>
 </ul>
 
                     </main>
