--- a/tutorials/the_truth/index.html
+++ b/tutorials/the_truth/index.html
@@ -154,7 +154,7 @@ changes. It even has full support for real-time collaboration. Multiple people c
 the same game project, Google Docs-style. Since all of these features are built into the data model
 itself, your custom, game-specific data will get them automatically, without you having to write a
 line of code.</p>
-<p>This section shall introduce you to some more complex topics such as <a href="%7B%7Bbase_url%7D%7D/the_truth/custom_asset/index.html"><em>How to create your own asset.</em></a></p>
+<p>This section shall introduce you to some more complex topics such as <a href="https://ourmachinery.github.io/themachinery-books//the_truth/custom_asset/index.html"><em>How to create your own asset.</em></a></p>
 <p>For more information checkout the <a href="https://ourmachinery.com/apidoc/foundation/the_truth.h.html">documentation</a> and these blog posts: <a href="https://ourmachinery.com/post/the-story-behind-the-truth-designing-a-data-model/">The Story behind The Truth: Designing a Data Model</a>  or this <a href="https://ourmachinery.com/post/multi-threading-the-truth/">one</a>.</p>
 
                     </main>
