deploy: 5fb9599e59822b2dbcf3867a08bdae337c415f39

--- a/the_machinery_book/extending_the_machinery/write-a-plugin.html
+++ b/the_machinery_book/extending_the_machinery/write-a-plugin.html
@@ -153,7 +153,7 @@
 <li>What is needed to write a plugin</li>
 <li>How to write a plugin</li>
 </ul>
-<p>This walk through expects you to have the basic understanding about the plugin system. Otherwise you can read more <a href="%7B%7Bbase_url%7D%7D/the_machinery_book/extending_the_machinery/the_plugin_system.html">here</a>.</p>
+<p>This walk through expects you to have the basic understanding about the plugin system. Otherwise you can read more <a href="https://ourmachinery.github.io/themachinery-books//the_machinery_book/extending_the_machinery/the_plugin_system.html">here</a>.</p>
 <p>The Machinery is built around a plugin model. All features, even the built-in ones, are provided
 through plugins. You can extend The Machinery by writing your own plugins. When The Machinery
 launches, it loads all the plugins named <code>tm_*.dll</code> in its <code>plugins/</code> folder. If you write your own
