--- a/the_machinery_book/qa_pipeline/index.html
+++ b/the_machinery_book/qa_pipeline/index.html
@@ -166,7 +166,7 @@ After you have loaded the <code>[tm_profiler_api](https://ourmachinery.com//apid
 <tr><td>The call to this macro starts a local profiler scope. The scope is tagged with the naked word tag (it gets stringified by the macro). Use a local profiler scope if you need to profile parts of a function.</td></tr>
 </tbody></table>
 <p><em>Example:</em></p>
-<pre><code class="language-c">void my_function({{base_url}}/the_machinery_book/*some arguments*/){
+<pre><code class="language-c">void my_function(https://ourmachinery.github.io/themachinery-books//the_machinery_book/*some arguments*/){
    TM_PROFILER_BEGIN_FUNC_SCOPE()
    // .. some code
    TM_PROFILER_END_FUNC_SCOPE()
