--- a/the_machinery_book/the_truth/custom_truth_type.html
+++ b/the_machinery_book/the_truth/custom_truth_type.html
@@ -147,7 +147,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="create-a-custom-truth-type"><a class="header" href="#create-a-custom-truth-type">Create a custom Truth Type</a></h1>
-<p>The truth is our centralized data model for editing data in the Engine. For more details on the system itself click here: <a href="%7B%7Bbase_url%7D%7D/the_machinery_book/the_truth/index.html">The Truth</a></p>
+<p>The truth is our centralized data model for editing data in the Engine. For more details on the system itself click here: <a href="https://ourmachinery.github.io/themachinery-books//the_machinery_book/the_truth/index.html">The Truth</a></p>
 
                     </main>
 
