--- a/the_machinery_book/qa_pipeline/how_to_write_unit_tests.html
+++ b/the_machinery_book/qa_pipeline/how_to_write_unit_tests.html
@@ -152,7 +152,7 @@
 <li>How to constantly monitor your changes</li>
 <li>How to write tests in your plugin</li>
 </ul>
-<p>This walkthrough expects basic knowledge on how to create a plugin and how a plugin is structured. If you are missing this knowledge, then you can find out more <a href="%7B%7Bbase_url%7D%7D/the_machinery_book/extending_the_machinery/the_plugin_system.html">here</a>.</p>
+<p>This walkthrough expects basic knowledge on how to create a plugin and how a plugin is structured. If you are missing this knowledge, then you can find out more <a href="https://ourmachinery.github.io/themachinery-books//the_machinery_book/extending_the_machinery/the_plugin_system.html">here</a>.</p>
 <blockquote>
 <p><strong>Note:</strong> At this point, the testing framework is in the beginning stage. We are extending its capabilities overtime to meet the needs of modern game development QA pipelines.</p>
 </blockquote>
