--- a/the_machinery_book/the_editor/tabs.html
+++ b/the_machinery_book/the_editor/tabs.html
@@ -163,7 +163,7 @@ In the context menu, you have more options for pinning. These allow you to manag
 <tr><td>Pin to View 🗖</td><td>This Pins the tab's content to another tab view that is currently open in the current window. You can pin a tab to multiple other tabs at the same time.</td></tr>
 <tr><td>Pin to Window 🗗</td><td>It pins the current tab to the selected window. For example, if you pin the Properties tab to Window 2. and choose an asset from the Asset Browser, the properties tab in Window 1. will display the selected asset.</td></tr>
 </tbody></table>
-<p>Besides, it is possible to extend the Engine with custom tabs. You can do this via the <strong>File → New Plugin → Editor Tabs.</strong> How to write your custom tab is out of the scope of this article but is covered <a href="%7B%7Bbase_url%7D%7D/the_machinery_book/extending_the_machinery/write-a-plugin.html">here</a>.</p>
+<p>Besides, it is possible to extend the Engine with custom tabs. You can do this via the <strong>File → New Plugin → Editor Tabs.</strong> How to write your custom tab is out of the scope of this article but is covered <a href="https://ourmachinery.github.io/themachinery-books//the_machinery_book/extending_the_machinery/write-a-plugin.html">here</a>.</p>
 <p><strong>Keyboard bindings</strong></p>
 <table><thead><tr><th>Key</th><th>Description</th></tr></thead><tbody>
 <tr><td>Ctrl + Tab</td><td>Switch between tabs</td></tr>
